# the-daily-claude

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html
crates/trawl/: Cargo.toml  README.md  anonymize.local.toml.example
crates/trawl/prompts/: extractor.md  tokeniser.md
crates/trawl/src/: entry.rs  extractor.rs  lib.rs  llm.rs  main.rs  paths.rs  registry.rs  session.rs  state.rs  tokeniser.rs
docs/: HANDOFF.md
docs/plans/: 2026-03-20-001-feat-trawl-haiku-scoring-plan.md  2026-04-04-001-fix-pr1-review-findings-plan.md  2026-04-07-001-refactor-trawl-zfc-redesign-plan.md  2026-04-08-001-fix-pr-3-review-feedback-plan.md
todos/: 001-trawl-refinements.md  010-trawl-quality-improvements.md  017-trawl-batch-scoring.md  018-trawl-incremental-state.md  019-anonymization-hardening.md  020-trawl-tool-result-mislabeling.md  021-trawl-overlap-dedup-too-loose.md  022-trawl-zfc-redesign.md  023-trawl-state-out-of-repo.md  024-trawl-audit-published-artifacts.md  025-registry-driven-retokenisation.md  026-coderabbit-extractor-redact-credentials.md  027-coderabbit-trawl-entry-number-race.md  028-coderabbit-extractor-bracket-detection.md  030-registry-validate-perf.md  031-coderabbit-tokeniser-geography-example.md  032-alt-llm-backends-codex-gemini.md  033-trawl-bare-flag.md  034-extractor-deterministic-path-handling.md  035-trawl-readme-cli-contract-sync.md  036-claude-subprocess-error-surfacing.md  037-source-model-metadata.md  038-pi-backend-and-session-source.md  039-opencode-session-source.md  040-gemini-session-source.md  041-cursor-session-source.md
(+33 files in other folders)
